syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// HunterTalents message.
message HunterTalents {
}

enum HunterMajorGlyph {
    HunterMajorGlyphNone = 0;
    GlyphOfCamouflage = 42898;
    GlyphOfLiberation = 42899;
    GlyphOfMending = 42900;
    GlyphOfDistractingShot = 42901;
    GlyphOfEndlessWrath = 42902;
    GlyphOfDeterrence = 42903;
    GlyphOfDisengage = 42904;
    GlyphOfFreezingTrap = 42905;
    GlyphOfIceTrap = 42906;
    GlyphOfMisdirection = 42907;
    GlyphOfExplosiveTrap = 42908;
    GlyphOfAnimalBond = 42909;
    GlyphOfNoEscape = 42910;
    GlyphOfPathfinding = 42911;
    GlyphOfSnakeTrap = 42913;
    GlyphOfAimedShot = 42914;
    GlyphOfMendPet = 42915;
    GlyphOfSolace = 42917;
    GlyphOfChimeraShot = 45625;
    GlyphOfTranquilizingShot = 45731;
    GlyphOfMastersCall = 45733;
    GlyphOfScatterShot = 45734;
    GlyphOfMirroredBlades = 45735;
    GlyphOfBlackIce = 85684;
    GlyphOfTheLeanPack = 104270;
    GlyphOfEnduringDeceit = 104276;
}

enum HunterMinorGlyph {
    HunterMinorGlyphNone = 0;
    GlyphOfAspects = 42897;
    GlyphOfTameBeast = 42912;
    GlyphOfRevivePet = 43338;
    GlyphOfLesserProportion = 43350;
    GlyphOfFireworks = 43351;
    GlyphOfAspectOfThePack = 43355;
    GlyphOfStampedeHunter = 43356;
    GlyphOfAspectOfTheCheetah = 45732;
    GlyphOfAspectOfTheBeast = 85683;
    GlyphOfDirection = 87278;
    GlyphOfMarking = 87279;
    GlyphOfFetch = 87393;
    GlyphOfFocusedFire = 104274;
    GlyphOfChameleon = 104278;
}

// END GENERATED

message HunterPetTalents {
	// Ferocity
	int32 serpent_swiftness = 1;
	bool dash = 2;
	int32 great_stamina = 3;
	int32 natural_armor = 4;
	int32 improved_cower = 5;
	int32 bloodthirsty = 6;
	int32 spiked_collar = 7;
	bool boars_speed = 8;
	int32 culling_the_herd = 9;
	int32 lionhearted = 10;
	bool charge = 11;
	bool heart_of_the_phoenix = 12;
	int32 spiders_bite = 13;
	int32 great_resistance = 14;
	bool rabid = 15;
	bool lick_your_wounds = 16;
	bool call_of_the_wild = 17;
	int32 shark_attack = 18;
	int32 wild_hunt = 19;

	// Tenacity
	int32 blood_of_the_rhino = 20;
	int32 pet_barding = 21;
	int32 guard_dog = 22;
	bool thunderstomp = 23;
	int32 grace_of_the_mantis = 24;
	bool last_stand = 25;
	bool taunt = 26;
	bool roar_of_sacrifice = 27;
	bool intervene = 28;
	int32 silverback = 29;

	// Cunning
	bool dive = 30;
	int32 mobility = 31;
	int32 owls_focus = 32;
	bool carrion_feeder = 33;
	int32 cornered = 34;
	int32 feeding_frenzy = 35;
	bool wolverine_bite = 36;
	bool roar_of_recovery = 37;
	bool bullheaded = 38;
}

enum HunterStingType {
	NoSting = 0;
	ScorpidSting = 1;
	SerpentSting = 2;
}

message HunterOptions {
	enum Ammo {
		AmmoNone = 0;
		IcebladeArrow = 1;
		SaroniteRazorheads = 2;
		TerrorshaftArrow = 3;
		TimelessArrow = 4;
		MysteriousArrow = 5;
		AdamantiteStinger = 6;
		BlackflightArrow = 7;
	}
	Ammo ammo = 1;

	enum PetType {
		PetNone = 0;
		Bat = 1;
		Bear = 2;
		BirdOfPrey = 3;
		Boar = 4;
		CarrionBird = 5;
		Cat = 6;
		Chimaera = 7;
		CoreHound = 8;
		Crab = 9;
		Crocolisk = 10;
		Devilsaur = 11;
		Dragonhawk = 12;
		Gorilla = 13;
		Hyena = 14;
		Moth = 15;
		NetherRay = 16;
		Raptor = 17;
		Ravager = 18;
		Rhino = 19;
		Scorpid = 20;
		Serpent = 21;
		Silithid = 22;
		Spider = 23;
		SpiritBeast = 24;
		SporeBat = 25;
		Tallstrider = 26;
		Turtle = 27;
		WarpStalker = 28;
		Wasp = 29;
		WindSerpent = 30;
		Wolf = 31;
		Worm = 32;
		ShaleSpider = 33;
		Fox = 34;
	}
	PetType pet_type = 2;

	HunterPetTalents pet_talents = 3;
	double pet_uptime = 4;
	double time_to_trap_weave_ms = 5;
	bool use_hunters_mark = 6;
	bool use_aq_tier = 7;
	bool use_naxx_tier = 8;
}

message BeastMasteryHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message MarksmanshipHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message SurvivalHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
		double sniper_training_uptime = 2;
	}
	Options options = 1;
}
